# some-rpg

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  makefile  some-rpg.cbp  some-rpg.depend  some-rpg.sln  some-rpg.vcxproj
some-rpg/: some-rpg.vcxproj
some-rpg/src/: game.cpp  game.h  main.cpp  syswrap.cpp  syswrap.h
some-rpg/src/game/: biome.h  item.h  serializable.h  stat.h  statmod.h  statusfx.h  uidgen.h
src/: game.cpp  game.h  gamepackage.h  main.cpp  mysysdef.h  scene.h  syswrap.cpp  syswrap.h
src/game/: ability.h  behaviour.h  behaviourcontroller.h  entity.h  game.cpp  game.h  item.h  player.h  scene.h  scenemanager.cpp  scenemanager.h  scenes.h  serializable.h  stat.h  uidgen.h
src/game/scenes/: mainmenu.cpp  mainmenu.h  pregame.cpp  pregame.h
